--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A help bot",
   "main": "index.js",
   "scripts": {
-    "start": "nodejs index.js"
+    "start": "nodejs index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/SaphireVert/channel-bot#readme",
   "dependencies": {
+    "nodemon": "^2.0.7",
     "telebot": "^1.4.1"
   }
 }
